clusters/cluster/apps/verein-ext/cl-events/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cl-events-backend
  namespace: verein-ext
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cl-events-backend
  template:
    metadata:
      labels:
        app: cl-events-backend
    spec:
      containers:
      - name: cl-events-backend
        image: ghcr.io/neuland-ingolstadt/campus-life-events-backend:build-12 # {"$imagepolicy": "flux-system:cl-events-backend"}
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
