clusters/cluster/apps/verein-ext/cl-events/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cl-events-frontend
  namespace: verein-ext
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cl-events-frontend
  template:
    metadata:
      labels:
        app: cl-events-frontend
    spec:
      containers:
      - name: cl-events-frontend
        image: ghcr.io/neuland-ingolstadt/campus-life-events-frontend:build-29 # {"$imagepolicy": "flux-system:cl-events-frontend"}
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
