clusters/cluster/apps/verein-ext/cl-events/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cl-events-redis
  namespace: verein-ext
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cl-events-redis
  template:
    metadata:
      labels:
        app: cl-events-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          command: ["redis-server"]
          ports:
            - containerPort: 6379
              name: redis
