clusters/cluster/apps/verein-ext/cl-events/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cl-events-frontend
  namespace: verein-ext
spec:
  type: ClusterIP
  selector:
    app: cl-events-frontend
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
