clusters/cluster/apps/verein-ext/cl-events/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cl-events-postgres
  namespace: verein-ext
spec:
  type: ClusterIP
  selector:
    app: cl-events-postgres
  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: postgres
