clusters/cluster/apps/verein-ext/cl-events/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cl-events
  namespace: verein-ext
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - cl.neuland-ingolstadt.de
    secretName: verein-ext-tls
  rules:
  - host: cl.neuland-ingolstadt.de
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: cl-events-backend
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cl-events-frontend
            port:
              number: 3000
